[package]
name = "srflp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand           = "0.8"
rand_distr     = "0.4"
rand_chacha    = "0.3"
clap           = { version = "4.0", features = ["derive"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
ddo            = { git = "https://github.com/xgillard/ddo" }
smallbitset    = "0.5"
ordered-float  = "3.0.0"
